--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,7 @@
 @import "mocha.css"; 
 
 * {
-    font-family: "MesloLGS Nerd Font Mono Bold";
+    font-family: FontAwesome, "JetBrainsMono Nerd Font", "MesloLGS Nerd Font Mono Bold";
     font-size: 16px;
     min-height: 0;
     font-weight: bold;
@@ -13,7 +13,8 @@ window#waybar {
     color: @overlay0;
     transition-property: background-color;
     transition-duration: 0.1s;
-    border-bottom: 1px solid @overlay1;
+    border: 1px solid @overlay1;
+    border-radius: 15px;
 }
 
 #window {
@@ -31,7 +32,6 @@ button {
 button:hover {
     background: inherit;
     color: @mauve;
-    border-top: 2px solid @mauve;
 }
 
 #workspaces button {
@@ -41,13 +41,11 @@ button:hover {
 #workspaces button.focused {
     background-color: rgba(0, 0, 0, 0.3);
     color: @rosewater;
-    border-top: 2px solid @rosewater;
 }
 
 #workspaces button.active {
     background-color: rgba(0, 0, 0, 0.3);
     color: @mauve;
-    border-top: 2px solid @mauve;
 }
 
 #workspaces button.urgent {
@@ -75,24 +73,24 @@ button:hover {
   padding-right: 4px;
 }
 
+#backlight {
+    color: #90b1b1;
+}
+
 #clock {
     color: @maroon;
-    border-bottom: 2px solid @maroon;
 }
 
 #clock.date {
     color: @mauve;
-    border-bottom: 2px solid @mauve;
 }
 
 #pulseaudio {
     color: @blue;
-    border-bottom: 2px solid @blue;
 }
 
 #network {
     color: @yellow;
-    border-bottom: 2px solid @yellow;
 }
 
 #idle_inhibitor {
@@ -106,7 +104,6 @@ button:hover {
 
 #battery {
     color: @green;
-    border-bottom: 2px solid @green;
 }
 
 /* If workspaces is the leftmost module, omit left margin */
@@ -124,4 +121,8 @@ button:hover {
     border-radius: 15px;
     padding-left: 6px;
     padding-right: 6px;
+}
+
+#custom-notification {
+  font-family: "NotoSansMono Nerd Font";
 }
