--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -2,8 +2,8 @@
 
 * {
     font-family: FontAwesome, "JetBrainsMono Nerd Font", "MesloLGS Nerd Font Mono Bold";
-    font-size: 16px;
-    min-height: 0;
+    font-size: 1.1rem;
+    min-height: 20px;
     font-weight: bold;
 }
 
@@ -15,18 +15,22 @@ window#waybar {
     transition-duration: 0.1s;
     border: 1px solid @overlay1;
     border-radius: 15px;
+    padding: 0px;
+    margin: 0px;
 }
 
 #window {
-    margin: 8px;
-    padding-left: 8;
-    padding-right: 8;
+    /* margin: 1px; */
+    /* padding-left: 2px; */
+    /* padding-right: 2px; */
+    /* margin-right: 100px; */
+    /* padding-right: 100px; */
 }
 
 button {
     box-shadow: inset 0 -3px transparent;
     border: none;
-    border-radius: 0;
+    border-radius: 0px;
 }
 
 button:hover {
@@ -35,7 +39,7 @@ button:hover {
 }
 
 #workspaces button {
-    padding: 0 4px;
+    /* padding: 0 4px; */
 }
 
 #workspaces button.focused {
@@ -65,12 +69,12 @@ button:hover {
 #network,
 #mode,
 #scratchpad {
-  margin-top: 2px;
-  margin-bottom: 2px;
-  margin-left: 4px;
-  margin-right: 4px;
-  padding-left: 4px;
-  padding-right: 4px;
+  margin-top: 1px;
+  margin-bottom: 1px;
+  margin-left: 2px;
+  margin-right: 2px;
+  padding-left: 2px;
+  padding-right: 2px;
 }
 
 #backlight {
@@ -108,13 +112,17 @@ button:hover {
 
 /* If workspaces is the leftmost module, omit left margin */
 .modules-left>widget:first-child>#workspaces {
-    margin-left: 0;
+    margin-left: 6px;
 }
 
 /* If workspaces is the rightmost module, omit right margin */
-.modules-right>widget:last-child>#workspaces {
+/* .modules-right>widget:last-child>#workspaces {
     margin-right: 0;
-}
+} */
+
+/* .modules-right>widget:last-child># {
+    margin-right: 6px;
+} */
 
 #custom-vpn {
     color: @lavender;
