--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,62 +1,35 @@
-@import "mocha.css"; 
-
 * {
-    font-family: FontAwesome, "JetBrainsMono Nerd Font", "MesloLGS Nerd Font Mono Bold";
-    font-size: 1.1rem;
-    min-height: 20px;
-    font-weight: bold;
+    /* `otf-font-awesome` and SpaceMono Nerd Font are required to be installed for icons */
+    font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
+    font-size: 15px;
+    transition: background-color .3s ease-out;
 }
 
 window#waybar {
-    background: transparent;
-    background-color: @crust;
-    color: @overlay0;
-    transition-property: background-color;
-    transition-duration: 0.1s;
-    border: 1px solid @overlay1;
+    background: rgba(26, 27, 38, 0);
+    color: #c0caf5;
+    font-family: 
+        SpaceMono Nerd Font,
+        feather;
+    transition: background-color .5s;
+}
+
+.modules-left,
+.modules-center,
+.modules-right
+{
+    background: rgba(0, 0, 8, .7);
+    margin: 5px 10px;
+    padding: 0 5px;
     border-radius: 15px;
-    padding: 0px;
-    margin: 0px;
+}
+.modules-left {
+    padding: 0;
+}
+.modules-center {
+    padding: 0 10px;
 }
 
-#window {
-    /* margin: 1px; */
-    /* padding-left: 2px; */
-    /* padding-right: 2px; */
-    /* margin-right: 100px; */
-    /* padding-right: 100px; */
-}
-
-button {
-    box-shadow: inset 0 -3px transparent;
-    border: none;
-    border-radius: 0px;
-}
-
-button:hover {
-    background: inherit;
-    color: @mauve;
-}
-
-#workspaces button {
-    /* padding: 0 4px; */
-}
-
-#workspaces button.focused {
-    background-color: rgba(0, 0, 0, 0.3);
-    color: @rosewater;
-}
-
-#workspaces button.active {
-    background-color: rgba(0, 0, 0, 0.3);
-    color: @mauve;
-}
-
-#workspaces button.urgent {
-    background-color: #eb4d4b;
-}
-
-#pulseaudio,
 #clock,
 #battery,
 #cpu,
@@ -64,73 +37,72 @@ button:hover {
 #disk,
 #temperature,
 #backlight,
-#wireplumber,
-#tray,
 #network,
+#pulseaudio,
+#wireplumber,
+#custom-media,
+#tray,
 #mode,
-#scratchpad {
-  margin-top: 1px;
-  margin-bottom: 1px;
-  margin-left: 2px;
-  margin-right: 2px;
-  padding-left: 2px;
-  padding-right: 2px;
-}
-
-#backlight {
-    color: #90b1b1;
-}
-
-#clock {
-    color: @maroon;
-}
-
-#clock.date {
-    color: @mauve;
-}
-
-#pulseaudio {
-    color: @blue;
-}
-
-#network {
-    color: @yellow;
-}
-
-#idle_inhibitor {
-    margin-right: 12px;
-    color: #7cb342;
-}
-
-#idle_inhibitor.activated {
-    color: @red;
-}
-
-#battery {
-    color: @green;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left>widget:first-child>#workspaces {
-    margin-left: 6px;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-/* .modules-right>widget:last-child>#workspaces {
-    margin-right: 0;
-} */
-
-/* .modules-right>widget:last-child># {
-    margin-right: 6px;
-} */
-
-#custom-vpn {
-    color: @lavender;
+#idle_inhibitor,
+#scratchpad,
+#power-profiles-daemon,
+#language,
+#mpd {
+    padding: 0 10px;
     border-radius: 15px;
-    padding-left: 6px;
-    padding-right: 6px;
 }
 
-#custom-notification {
-  font-family: "NotoSansMono Nerd Font";
+#clock:hover,
+#battery:hover,
+#cpu:hover,
+#memory:hover,
+#disk:hover,
+#temperature:hover,
+#backlight:hover,
+#network:hover,
+#pulseaudio:hover,
+#wireplumber:hover,
+#custom-media:hover,
+#tray:hover,
+#mode:hover,
+#idle_inhibitor:hover,
+#scratchpad:hover,
+#power-profiles-daemon:hover,
+#language:hover,
+#mpd:hover {
+    background: rgba(26, 27, 38, 0.9);
+}
+
+
+#workspaces button {
+  background: transparent;
+  font-family:
+    SpaceMono Nerd Font,
+    feather;
+  font-weight: 900;
+  font-size: 13pt;
+  color: #c0caf5;
+  border:none;
+  border-radius: 15px;
+}
+
+#workspaces button.active {
+  background: #cdd6f4;
+  color: #11111b; 
+}
+
+#workspaces button:hover {
+  background: #11111b;
+  color: #cdd6f4;
+  box-shadow: none;
+}
+
+#custom-arch {
+    margin-left: 5px;
+    padding: 0 10px;
+    font-size: 25px;
+    transition: color .5s;
+}
+#custom-arch:hover {
+    color: #1793d1;
 }
