--- a/.config/waybar/style.css
+++ b/.config/waybar/style.css
@@ -1,7 +1,6 @@
 * {
-    /* `otf-font-awesome` and SpaceMono Nerd Font are required to be installed for icons */
     font-family: "Fira Sans Semibold", FontAwesome, Roboto, Helvetica, Arial, sans-serif;
-    font-size: 15px;
+    font-size: 13pt;
     transition: background-color .3s ease-out;
 }
 
@@ -19,24 +18,20 @@ window#waybar {
 .modules-right
 {
     background: rgba(0, 0, 8, .7);
-    margin: 5px 10px;
+    margin: 2px 2px;
     padding: 0 5px;
     border-radius: 15px;
 }
 .modules-left {
-    padding: 0;
+    padding: 2px;
 }
 .modules-center {
-    padding: 0 10px;
+    padding: 0 0px;
 }
 
 #clock,
 #battery,
-#cpu,
-#memory,
-#disk,
 #temperature,
-#backlight,
 #network,
 #pulseaudio,
 #wireplumber,
@@ -83,7 +78,7 @@ window#waybar {
   font-size: 13pt;
   color: #c0caf5;
   border:none;
-  border-radius: 15px;
+  border-radius: 14px;
 }
 
 #workspaces button.active {
@@ -100,7 +95,7 @@ window#waybar {
 #custom-arch {
     margin-left: 5px;
     padding: 0 10px;
-    font-size: 25px;
+    font-size: 14pt;
     transition: color .5s;
 }
 #custom-arch:hover {
